--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
       <br>
       <div class="row justify-content-center">
-       <a href="https://github.com/sandesta/e-sertifikat" class="btn btn-primary mb-5">Download Source Code</a>
+       <a href="https://wa.me/6282221792667" class="btn btn-primary mb-5">Hubungi Saya</a>
       </div>
       <br>
       <br>
